[package]
name = "fusetest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
atoi = "1.0.0"
bstr = { version = "0.2.17", default-features = false, features = [
    "std",
    "serde1",
] }
env_logger = "0.9.0"
fuser = { version = "0.11.1", default-features = false }
libc = "0.2.132"
log = "0.4.17"
memchr = "2.5.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
zstd = { version = "0.11.2", default-features = false }
